mods/redsquare/web/css/redsquare-base.css
.redsquare-appspace-profile-follow-btn {
  position: relative;
  float: right;
  margin-top: -0.75rem;
}

.redsquare-page-header-title {
  color: var(--saito-red);
  font-size: 2.5rem;
  padding: 1px;
  text-transform: uppercase;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.redsquare-redsquare::before {
  -webkit-text-stroke: var(--saito-red) 1px;
  color: transparent;
}

.redsquare-profile {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.redsquare-appspace-profile {
  display: grid;
  grid-template-columns: max-content 1fr max-content;
  gap: 1rem;
  padding: 2rem;
}

.redsquare-appspace-profile>div {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.redsquare-appspace-profile-container {
  border: 1px solid var(--saito-border-color);
  border-radius: 0.5rem;
}

.redsquare-actions-buttons {
  position: relative;
  display: flex;
}

.redsquare-actions-container {
  display: flex;
  flex-flow: row-reverse;
  right: 1rem;
  margin-left: auto;
}

.redsquare-actions-container .saito-button-secondary {
  margin-top: 0;
  padding: 0.5rem 0.7rem 0.4rem 0.7rem;
}

.redsquare-sidebar {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
}

.redsquare-profile .redsquare-appspace-body {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

#redsquare-intersection {
  opacity: 1;
  height: 1rem;
}

.saito-main>.saito-loader {
  margin-top: 15vh;
}

.post-tweet {
  display: none;
  min-width: 5rem;
  height: 5rem;
  width: 5rem;
  border-radius: 50%;
  line-height: 5rem;
  padding: 0rem;
  font-size: 4rem;
  position: fixed;
  bottom: 1.5rem;
  right: 1.5rem;
  z-index: 3;
}

.redsquare-menu-home:hover .fa-house::before {
  content: "\f021";
}

.saito-loader.temp {
  margin-top: 3rem;
}

@media screen and (max-width: 900px) {
  .redsquare-page-header-title {
    font-size: 2rem;
  }
  div#redsquare-tweet {
    content: "\002B";
    border-radius: 50%;
    width: 5rem;
    height: 5rem;
    background: var(--saito-primary);
    position: fixed;
    z-index: 1;
    bottom: 2rem;
    right: 2rem;
  }
  div#redsquare-tweet:hover {
    color: transparent;
  }
  div#redsquare-tweet::after {
    content: "\002B";
    position: absolute;
    color: var(--saito-white);
    font-size: 5rem;
    text-align: center;
    top: 0;
    left: 0;
    line-height: 5rem;
    width: 5rem;
  }
  div#redsquare-profile {
    display: none;
  }
  .redsquare-appspace-header .redsquare-page-header-title {
    display: none;
  }
  .redsquare-appspace-body {
    margin-top: -1rem;
  }
  .post-tweet {
    display: inline-block;
  }
}


.redsquare-home .saito-user>.saito-identicon-box {
  position: relative;
  z-index: 5px;
}

/* copied from youtube css to make sure the videos don't load enormous */

.html5-video-player {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: 0;
  outline: 0;
}

